# weekly-data-builds

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
batch-etl_14-07-25/: .pre-commit-config.yaml  Makefile  README_batch_etl.md  pyproject.toml
batch-etl_14-07-25/.github/workflows/: ci.yml
batch-etl_14-07-25/etl/: cli.py  io.py
batch-etl_14-07-25/tests/: test_io.py
dbt-basics_21-07-25/analytics_warehouse/: dbt_project.yml
dbt-basics_21-07-25/docs/: one-pager.md
etl/: cli.py  io.py
numpy-loan-calculator_18-08-2025/: .devcontainer.json  LICENSE  setup.py
pandas-numpy-time-series_18-2025/: LICENSE  README.md  README.rst  requirements.txt  setup.py
pandas-numpy-time-series_18-2025/data/: clean_data.py
pandas-numpy-time-series_18-2025/sample/: core.py  helpers.py
pandas-numpy-time-series_18-2025/tests/: test_advanced.py  test_basic.py
pandas-yf-star-schema-risk-report_28-07-25/: .Makefile  .gitignore  README.md
pandas-yf-star-schema-risk-report_28-07-25/notebooks/: .env
pandas-yf-star-schema-risk-report_28-07-25/sql/: 001_init_star_schema.sql
pandas-yf-star-schema-risk-report_28-07-25/src/: plot_risk_metrics.py  risk_metrics_etl.py
pandas‑yf‑star‑schema‑risk‑report_28-07-25/: .env.example  README.md
pandas‑yf‑star‑schema‑risk‑report_28-07-25/src/: plot_risk_metrics.py
powerbi-python-transformation-dashboard_04-08-2025/: .gitignore
powerbi-python-transformation-dashboard_04-08-2025/scripts/: clean_transform.py
